--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -488,27 +488,30 @@ h1 {
     
 .footer-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr auto 1fr;
     grid-template-rows: auto auto;
     grid-template-areas: 
-        "social social social"
-        "contact contact copyright";
-    gap: 1rem;
+        "contact social copyright";
     margin: 0 auto;
     padding: 1rem;
+    gap: 0;
+    column-gap: 4rem;
 }
 
 .social {
     grid-area: social;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 15px;
+    justify-self: center;
 }
 
 .contact-info {
     grid-area: contact;
-    text-align: center;
+    text-align: left;
+    justify-self: end;
 }
 
 .copyright-text {
