--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -596,3 +596,91 @@ h1 {
     padding: 0 5px;
     z-index: 1;
 }
+
+/*******************************************
+* 11. JOIN PAGE
+*******************************************/
+.main-layout {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    margin: 2rem auto;
+    max-width: 800px;
+}
+
+/* 11.1 Layout */
+form label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+    margin: 1rem auto;
+}
+
+/* 11.2 Form */
+
+form input,
+form textarea {
+    display: block;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 350px;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+
+.conf fieldset {
+    margin: 1rem;
+    border: solid var(--card-background);
+    background-color: lightgray;
+    border-radius: 6px;
+    padding: 1rem 2%;
+    max-width: 90%;
+}
+
+.conf label {
+    display: block;
+    padding: 1rem 0 0.5rem 0;
+    color: rgb(5, 2, 1);
+    font-size: .9rem;
+}
+
+.conf input:required:invalid,
+.conf textarea:required:invalid {
+    border-right: solid 8px red;
+}
+
+.conf input:required:valid,
+.conf textarea:required:valid {
+    border-right: solid 8px green;
+}
+
+.conf input,
+.conf textarea{
+    width: 50%;
+    padding: .5rem;
+    border-radius: 4px;
+    border: none;
+}
+
+.conf textarea {
+    height: 100px;
+    resize: vertical;
+}
+
+input[type="submit"] {
+    padding: .8rem;
+    border: none;
+    border-radius: 6px;
+    background-image: linear-gradient(var(--primary-background), var(--accent-background));
+    color: white;
+    cursor: pointer;
+    font-size: 1.25rem;
+    margin: .5rem auto 10%;
+    display: block;
+}
