--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -488,11 +488,6 @@ h1 {
         font-weight: 400;
     }
     
-
-
-
-
-    
 .footer-container {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -501,7 +496,7 @@ h1 {
         "contact social copyright";
     margin: 0 auto;
     padding: 1rem;
-    gap: 0;
+    gap: 2rem;
 }
 
 .social {
