added contact information box

--- a/final/styles/final-medium.css
+++ b/final/styles/final-medium.css
@@ -47,4 +47,19 @@
     .events {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .contact-us-container {
+        display: grid;
+        grid-template-areas: 
+        "form box";
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .contact-us-container form,
+    .contact-info-card {
+        flex: 1;
+        max-width: 500px;
+    }
+
 }
