--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -30,11 +30,11 @@
 }
 
 :root {
---white: #FDFEff;
---accent-background: #FBDE53ff;
---primary-background: #CE412Dff;
---card-background: #BF4834ff;
---highlight: #F25259ff;
+--white: #FDFE;
+--accent-background: #FBDE53;
+--primary-background: #CE412D;
+--card-background: #BF4834;
+--highlight: #F25259;
 }
 
 /*******************************************
@@ -47,7 +47,6 @@ body {
     margin: 0;
     background-color: var(--white);
     width: 100%;
-    background-color: whitesmoke;
 
 }
 
@@ -61,7 +60,6 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: var(--primary-background);
 }
 
 .logo {
@@ -112,7 +110,7 @@ header {
 
 .navigation a {
     text-decoration: none;
-    color: whitesmoke;
+    color: #FFFFFF;
     font-size: 2rem;
     font-family: "Work Sans", sans-serif;
     font-weight: 500;
@@ -166,7 +164,7 @@ header {
 }
 
 .navigation a.current {
-    color: whitesmoke;
+    color: #FFFFFF;
     font-weight: 700;
     text-decoration: underline;
 }
@@ -181,7 +179,12 @@ footer {
     flex-direction: row;
     align-items: center;
     background-color: var(--primary-background);
-    color: whitesmoke;
+}
+
+footer {
+    color: #FFFFFF;
+    font-size: 14pt;
+    font-weight: bold;
 }
 
 /*******************************************
@@ -329,7 +332,7 @@ h1 {
         border: none;
         border-radius: .5rem;
         background-color: var(--white);
-        color: #7A0F00;
+        color: #B83626;
         cursor: pointer;
         font-size: 1rem;
         font-weight: bold;
@@ -646,12 +649,12 @@ form textarea {
 
 .conf input:required:invalid,
 .conf textarea:required:invalid {
-    border-right: solid 8px red;
+    border-right: solid 8px #B83626;
 }
 
 .conf input:required:valid,
 .conf textarea:required:valid {
-    border-right: solid 8px green;
+    border-right: solid 8px #006400;
 }
 
 .conf input,
@@ -672,7 +675,7 @@ input[type="submit"] {
     border: none;
     border-radius: 6px;
     background-image: linear-gradient(var(--primary-background), var(--accent-background));
-    color: white;
+    color: black;
     cursor: pointer;
     font-size: 1.25rem;
     display: block;
