--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -30,7 +30,7 @@
 }
 
 :root {
---white: #FDFE;
+--white: #FDFEFF;
 --accent-background: #FBDE53;
 --primary-background: #CE412D;
 --card-background: #BF4834;
@@ -677,7 +677,7 @@ input[type="submit"] {
     background-image: linear-gradient(var(--primary-background), var(--accent-background));
     color: black;
     cursor: pointer;
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     display: block;
 }
 
