--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -675,7 +675,7 @@ input[type="submit"] {
     border: none;
     border-radius: 6px;
     background-image: linear-gradient(var(--primary-background), var(--accent-background));
-    color: black;
+    color: #ffffff;
     cursor: pointer;
     font-size: 1.15rem;
     display: block;
